--- a/fy19-balanced.html
+++ b/fy19-balanced.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <style>
-    #map-canvas { width:800px; height:600px; }
+    #map-canvas { width:1100px; height:650px; }
     .layer-wizard-search-label { font-family: sans-serif };
   </style>
   <script type="text/javascript"
@@ -14,28 +14,14 @@
     var layer_1;
     function initialize() {
       map = new google.maps.Map(document.getElementById('map-canvas'), {
-        center: new google.maps.LatLng(36.06520379630012, -105.13651541579691),
-        zoom: 4
+        center: new google.maps.LatLng(43.50075243569041, -75.71070549848582),
+        zoom: 7,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
       });
-      var style = [
-        {
-          featureType: 'all',
-          elementType: 'all',
-          stylers: [
-            { saturation: -74 }
-          ]
-        }
-      ];
-      var styledMapType = new google.maps.StyledMapType(style, {
-        map: map,
-        name: 'Styled Map'
-      });
-      map.mapTypes.set('map-style', styledMapType);
-      map.setMapTypeId('map-style');
       layer_0 = new google.maps.FusionTablesLayer({
         query: {
-          select: "col3>>1",
-          from: "1SJ61II862apmJelRSyEXa7X830MQv1PTadm6fo_A"
+          select: "col4>>1",
+          from: "1DPCUpkS3lCb59zOxzXmxZ5P8neGhDiqsD6Dyu3b9"
         },
         map: map,
         styleId: 2,
@@ -43,12 +29,26 @@
       });
       layer_1 = new google.maps.FusionTablesLayer({
         query: {
-          select: "col4",
-          from: "1H99tYZFBXvMO5WBES3PFmvstrtIi4nb62R4c7XwH"
+          select: "col5",
+          from: "1S0GBs0jJsKekMDSg_mChU1tnTZ7AiiWFEbBGTcWV"
         },
         map: map,
         styleId: 3,
         templateId: 3
+      });
+    }
+    function changeMap_1() {
+      var whereClause;
+      var searchString = document.getElementById('search-string_1').value.replace(/'/g, "\\'");
+      if (searchString != '--Select--') {
+        whereClause = "'TerrID' = '" + searchString + "'";
+      }
+      layer_1.setOptions({
+        query: {
+          select: "col5",
+          from: "1S0GBs0jJsKekMDSg_mChU1tnTZ7AiiWFEbBGTcWV",
+          where: whereClause
+        }
       });
     }
     google.maps.event.addDomListener(window, 'load', initialize);
@@ -56,5 +56,29 @@
   </head>
   <body>
     <div id="map-canvas"></div>
+    <div style="margin-top: 10px;">
+      <label class="layer-wizard-search-label">
+        TerrID
+        <select id="search-string_1" onchange="changeMap_1(this.value);">
+          <option value="--Select--">--Select--</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+          <option value="13">13</option>
+          <option value="14">14</option>
+          <option value="15">15</option>
+          <option value="16">16</option>
+        </select>
+      </label> 
+    </div>
   </body>
 </html>
