--- a/fy19-balanced.html
+++ b/fy19-balanced.html
@@ -60,7 +60,7 @@
       <label class="layer-wizard-search-label">
         TerrID
         <select id="search-string_1" onchange="changeMap_1(this.value);">
-          <option value="--Select--">--Select--</option>
+          <option value="--Select--">All</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
