--- a/fy19-balanced.html
+++ b/fy19-balanced.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Google Map Territories</title>
   <style>
     #map-canvas { width:1100px; height:650px; }
     .layer-wizard-search-label { font-family: sans-serif };
